Fix inline code snippets in dark mode
Two commits ago, it fixed code snippets in dark mode where it was more of a code block. But this was still broken for code surrounded in backticks.

--- a/DanClarkeBlog.Web/wwwroot/css/site.css
+++ b/DanClarkeBlog.Web/wwwroot/css/site.css
@@ -283,7 +283,7 @@ code {
 }
 
 @media (prefers-color-scheme: dark) {
-    code {
+    code, pre code {
         color: lightblue;
     }
 }
